# postgres_sync

./: Cargo.toml  README.md
.github/workflows/: ci.yml
postgres_sync/: Cargo.toml
postgres_sync/src/: config.rs  conn_str.rs  lib.rs  transaction.rs
verify_orig/: Cargo.toml
verify_orig/src/: chrono.rs  json.rs  logger.rs  main.rs
verify_sync/: Cargo.toml  src
