[package]
name = "postgres_sync"
version = "0.1.0"
edition = "2024"
authors = ["Vlad Shcherbina <vlad.shcherbina@gmail.com>"]
description = "A synchronous PostgreSQL client using std::net, with an API compatible with the popular postgres crate."
readme = "../README.md"
repository = "https://github.com/Vlad-Shchrebina/postgres_sync"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
bytes = "1"
postgres-protocol = "0.6.8"
postgres-types = "0.2.9"
fallible-iterator = "0.2"

[features]
with-serde_json-1 = ["postgres-types/with-serde_json-1"]
with-chrono-0_4 = ["postgres-types/with-chrono-0_4"]
