[package]
name = "postgres_sync"
version = "0.1.1"
edition = "2024"
authors = ["Vlad Shcherbina <vlad.shcherbina@gmail.com>"]
description = "A synchronous PostgreSQL client using std::net, with an API compatible with the popular postgres crate."
readme = "../README.md"
repository = "https://github.com/Vlad-Shcherbina/postgres_sync"
license = "MIT OR Apache-2.0"
categories = ["database"]
keywords = ["database", "postgres", "postgresql", "sql",  "sync"]

[lib]
doctest = false

[dependencies]
bytes = "1"
postgres-protocol = "0.6.8"
postgres-types = "0.2.9"
fallible-iterator = "0.2"
socket2 = "0.5"
log = "0.4"

[features]
with-serde_json-1 = ["postgres-types/with-serde_json-1"]
with-chrono-0_4 = ["postgres-types/with-chrono-0_4"]
