[package]
name = "verify_orig"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "verify_orig"
test = false

# anchor: wNRjWYxF
[dependencies]
postgres = { version = "*", features = ["with-serde_json-1", "with-chrono-0_4"] }
tokio-postgres = "<0.7.15" # https://github.com/rust-postgres/rust-postgres/issues/1284
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
