[package]
name = "verify_sync"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "verify_sync"
test = false

# anchor: wNRjWYxF
[dependencies]
postgres = { package = "postgres_sync", path = "../postgres_sync", features = ["with-serde_json-1", "with-chrono-0_4"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
